[package]
name = "cursive_hexview"
version = "0.2.0"
authors = ["Marcel Hellwig <git@cookiesoft.de>"]
description = "A simple hexviewer for cursive"
repository = "https://github.com/hellow554/cursive_hexview.git"
readme = "Readme.md"
keywords = ["cursive", "hexview"]
license = "MIT"

[dependencies]
cursive = { version = "0.15", default-features = false }
itertools = "0.8"

[dev-dependencies]
cursive = "0.15"

[badges.travis-ci]
repository="hellow554/cursive_hexview"
