[package]
name = "cursive_hexview"
version = "0.7.0"
authors = ["Marcel Hellwig <git@cookiesoft.de>"]
description = "A simple hexviewer for cursive"
repository = "https://github.com/hellow554/cursive_hexview.git"
readme = "Readme.md"
keywords = ["cursive", "hexview"]
license = "MIT"

[dependencies]
cursive_core = "0.4"
itertools = "0.11"

[dev-dependencies]
cursive = "0.21"

[badges.travis-ci]
repository="hellow554/cursive_hexview"
